--- a/style.css
+++ b/style.css
@@ -1,4 +1,32 @@
 /* NAVIGATION HEADER */
+.hamburgerbar {
+  width: 33px;
+  height: 4px;
+  background-color: green;
+  margin: 5px 0;
+}
+.hamburgerbar:first-child {
+  margin-top: 0;
+}
+.hamburgerbar:last-child {
+  margin-bottom: 0;
+}
+
+.cross div {
+  position: absolute;
+  top: 18px;
+  right: 5px;
+  width: 33px;
+  height: 4px;
+  background: white;
+}
+.cross div:first-child {
+  transform: rotate(45deg);
+}
+.cross div:last-child {
+  transform: rotate(-45deg);
+}
+
 .contact-items {
   position: fixed;
   top: 0;
@@ -8,27 +36,25 @@
   line-height: 1em;
   font-size: 1em;
   color: #333;
+  font-size: 1.2em;
+  text-decoration: none;
   z-index: 1000;
 }
 
-/* Button styling */
 .menu-toggle {
   position: fixed;
   top: 0;
   left: 0;
   background: white;
   border-bottom: 2px solid green;
-  height: 24px;
   width: 100%;
   padding: .75em 15px;
-  line-height: 1em;
-  font-size: 1em;
-  color: #333;
+  line-height: 24px;
 }
 
 .menu-toggle:hover,
 .menu-toggle:focus {
-  color: #c00;
+  color: red;
 }
 
 /*
@@ -36,6 +62,10 @@
  Offscreen menu style
 */
 .main-menu {
+  background: white;
+  border-bottom: 2px solid green;
+  height: 24px;
+
   position: fixed;
   left: -200px;
   top: 0;
@@ -50,26 +80,25 @@
   padding: 2.5em 0 0;
   min-height: 100%;
   width: 200px;
-  background: #1a1a1a;
+  background: #213752; /* background of offscreen/mobile menu */
 }
 
 .main-menu a {
   display: block;
   padding: .75em 15px;
-  line-height: 1em;
-  font-size: 1em;
+  line-height: 24px;
+  font-size: 1.2em;
   color: #fff;
   text-decoration: none;
-  border-bottom: 1px solid #383838;
+  border-bottom: 1px solid white;
 }
 
 .main-menu li:first-child a {
-  border-top: 1px solid #383838;
+  border-top: 1px solid white;
 }
 
 .main-menu a:hover,
 .main-menu a:focus {
-  background: #333;
   text-decoration: none;
 }
 
@@ -77,6 +106,7 @@
   position: absolute;
   right: 0;
   top: 0;
+  border: none;
 }
 
 /*
@@ -120,8 +150,6 @@
   width: 100%;
   height: 100%;
   z-index: 998;
-  /*background: #000;
-  background: rgba(0,0,0,.85);*/ /* donkere overlay */
   cursor: default;
 }
 
@@ -159,27 +187,26 @@
     
     /* Undo off-canvas styling */
     padding: 0;
-    -webkit-box-shadow: none;
-       -moz-box-shadow: none;
-            box-shadow: none;
     height: auto;
     width: auto;
     background: none;
   }
   
   .main-menu a {
-    color: #06c;
+    color: black;
     border: 0 !important; /* Remove borders from off-canvas styling */
   }
   
   .main-menu a:hover,
   .main-menu a:focus {
-    background: none; /* Remove background from off-canvas styling */
-    color: #c00;
+    color: white;
   }
 }
+/** END NAVIGATION HEADER **/
 
-/****************************************************************************/
+
+
+
 body {
   font-family: 'Hind Vadodara', sans-serif;
   padding: 0;
@@ -216,16 +243,18 @@ p {
 .orange:hover { background: #ff9442; }
 
 .main {
-  margin-top: 50px;
+  margin-top: 42px;
 }
 
 .section-wrapper {
   padding-top: 40px;
   margin-top: -34px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .section {
-  margin: 0 0 0 15px;
+  margin: 0 15px 0 15px;
   padding: 0px;
 }
 
@@ -298,7 +327,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0 0 10px 10px;
+  margin: 0 5px 10px 5px;
   padding: 20px;
   max-width: 80vw;
   border: 1px solid green;
