--- a/style.css
+++ b/style.css
@@ -6,7 +6,14 @@
   background: white;
   height: 50px;
   width: 100%;
-  border-bottom: 2px solid green;
+  display: flex;
+  align-items: center;
+  z-index: 1;
+}
+.logo {
+  margin-top: 3px;
+  margin-left: -25px;
+  transform: scale(0.4);
 }
 
 /* only for super large screens */
@@ -14,12 +21,21 @@
   display: none;
 }
 
+.navbar-text {
+  font-size: 1.5em;
+  font-family: 'Cabin Sketch', cursive;
+  min-width: 220px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5px;
+}
+
 .hamburger {
 }
 .hamburgerbar {
   width: 33px;
   height: 4px;
-  background-color: #212121;
+  background: #5c5c5c;
   margin: 5px 0;
   border-radius: 2px;
 }
@@ -49,13 +65,72 @@
   position: fixed;
   display: flex;
   align-items: center;
-  top: 0;
-  right: 0;
+  top: 2px;
+  right: 2px;
   height: 50px;
   z-index: 1000;
 }
 .contact-items a {
   text-decoration: none;
+}
+
+.contact-buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
+  margin: 10px auto;
+  max-width: 600px;
+}
+.contact-buttons-actie {
+  flex-direction: row;
+}
+.contact-button {
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 5px;
+  padding: 10px;
+  height: 100px;
+  width: 100px;
+  font-size: 1.3em;
+  text-decoration: none;
+  color: black;
+  border-radius: 50%;
+  border: 2px solid black;
+  transition: all 0.25s ease-in-out;
+  background: white;
+  background: linear-gradient(135deg, rgba(247,247,247,1) 14%, rgba(240,255,235,1) 34%, rgba(255,255,255,1) 39%, rgba(249,239,255,1) 43%, rgba(255,255,255,1) 48%, rgba(234,247,255,1) 52%, rgba(255,255,255,1) 64%);
+}
+.contact-button-actie {
+  height: 80px;
+  width: 80px;
+  font-size: 1.1em;
+  border-width: 1px;
+}
+.contact-button:hover {
+  transform: scale(1.1);
+}
+.contact-button-whatsapp {
+  border-color: green;
+  color: green;
+}
+.contact-button-e-mail {
+  border-color: darkorange;
+  color: darkorange;
+}
+.contact-button-phone {
+  border-color: darkred;
+  color: darkred;
+}
+
+.contact-text {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  max-width: 600px;
 }
 
 .phone {
@@ -68,6 +143,14 @@
   color: white;
   background: green;
   border-left: 1px solid white;
+}
+.phone:first-child {
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
+.phone:last-child {
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
 }
 .pointy-thingy {
   width: 110px;
@@ -90,6 +173,12 @@
   position: fixed;
   top: 14px;
   left: 14px;
+  z-index: 2;
+}
+
+.hamburgerlogo {
+  width: 110px;
+  margin-top: -12px;
 }
 
 /*
@@ -112,7 +201,7 @@
   padding: 2.5em 0 0;
   min-height: 100%;
   width: 120px;
-  background: #212121;
+  background: black;
 }
 
 .main-menu a {
@@ -230,7 +319,7 @@
   .main-menu a:hover {
     color: white;
   }
-}
+} 
 /** END NAVIGATION HEADER **/
 
 
@@ -249,14 +338,10 @@ div {
 }
 
 h1 {
-  
-  padding: 4px 20px;
+  text-align: center;
+  padding: 4px 20px 0;
   font-weight: 500;
-  color: white;
-  background: #5c5c5c;
-  border: 3px outset #5c5c5c;
-  border-radius: 3px;
-
+  color: black;
   height: 50px;
 }
 
@@ -287,11 +372,13 @@ p {
 }
 
 .section-wrapper {
-  padding-top: 40px;
-  margin-top: -34px;
   margin-left: auto;
   margin-right: auto;
-  background: white;
+  padding-bottom: 30px;
+  padding-top: 30px;
+  background: #f7f7f7;
+  background: rgb(247,247,247);
+  background: linear-gradient(0deg, rgba(247,247,247,1) 0%, rgba(255,255,255,1) 100%);
 }
 
 .section {
@@ -299,26 +386,134 @@ p {
   padding: 0px;
 }
 
-.final-section {
-  height: 50vh;
-  padding-bottom: 70px;
-  margin-bottom: 70px;
-}
-
 .hero {
   display: flex;
-  align-items: stretch;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   margin: 0;
   padding: 0;
   width: 100%;
   color: white;
+  background: purple;
+  background: rgb(8,3,87);
+  background: radial-gradient(circle, rgba(8,3,87,1) 0%, rgba(138,5,52,1) 53%, rgba(53,175,123,1) 77%, rgba(28,138,161,1) 100%);
+/*
+  background-image: url("https://www.anwb.nl/binaries/content/gallery/anwb/collecties/autotests/occasion/volkswagen/up/T__2003__3910000c.jpg");
+  background-repeat: no-repeat;
+  background-size: cover; */
+  height: 70vh;
+
+background: rgb(255,255,255);
+background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 53%, rgba(255,178,62,1) 59%, rgba(255,83,83,1) 64%, rgba(98,0,255,1) 91%);
+color: black;
+}
+.soon {
+  max-width: 50%;
+  text-align: center;
+  margin-bottom: 10px;
+}
+.soon-header {
+  font-size: 2.5em;
+  font-family: 'Cabin Sketch', cursive;
+  line-height: 0.8em;
+}
+.soon-link {
+  text-decoration: none;
+  background: transparent;
+  border: 2px solid white;
+  color: white;
+  font-size: 1.4em;
+  padding: 10px 15px;
+  border-radius: 100px;
+  color: darkorange;
+  background: white;
+  border: 2px solid darkorange;
+}
+.soon-link:hover {
+  transform: scale(1.1);
 }
 
-.hero-img {
-  flex-grow: 2;
-  max-height: 72vh;
-  max-width: 100%;
-  object-fit: cover;
+.actie {
+  border: 1px solid orange;
+  margin-left: auto;
+  margin-right: auto;
+  background: white;
+  padding: 10px;
+  max-width: 600px;
+}
+.actie-voorwaarden {
+  margin-left: auto;
+  margin-right: auto;
+  background: white;
+  padding: 10px;
+  max-width: 600px;
+}
+
+input[type='checkbox'] { 
+  display: none; 
+} 
+.wrap-collabsible { 
+  margin: 20px 0;
+  max-width: 620px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid #e06812;
+} 
+.lbl-toggle { 
+  display: block;
+  text-align: center; 
+  background: #e06812;
+  color: white;
+  transition: all 0.25s ease-out;
+  padding: 10px;
+}  
+.lbl-toggle::before { 
+  content: ' '; 
+  display: inline-block; 
+  border-top: 5px solid transparent; 
+  border-bottom: 5px solid transparent; 
+  border-left: 5px solid currentColor; 
+  vertical-align: middle; 
+  margin-right: .7rem; 
+  transform: translateY(-2px); 
+  transition: transform .2s ease-out; 
+} 
+.toggle:checked+.lbl-toggle::before { 
+  transform: rotate(90deg) translateX(-3px); 
+} 
+.collapsible-content { 
+  max-height: 0px; 
+  overflow: hidden;
+  background: white;
+  transition: max-height .25s ease-in-out; 
+} 
+.toggle:checked + .lbl-toggle + .collapsible-content { 
+  max-height: 10000px; 
+} 
+.toggle:checked+.lbl-toggle { 
+  border-bottom-right-radius: 0; 
+  border-bottom-left-radius: 0; 
+} 
+.collapsible-content .content-inner { 
+  padding: 20px 10px;
+}
+.collapsible-content .content-inner ul li { 
+  padding: 0 0 5px 0;
+}
+.collapsible-content .content-inner ul {
+  list-style: none; /* Remove default bullets */
+  margin: 0;
+  padding: 10px 10px 10px 20px;
+}
+
+.collapsible-content .content-inner ul li::before {
+  content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
+  color: #e06812; /* Change the color */
+  font-weight: bold; /* If you want it to be bold */
+  display: inline-block; /* Needed to add space between the bullet and the text */
+  width: 1em; /* Also needed for space (tweak if needed) */
+  margin-left: -1em; /* Also needed for space (tweak if needed) */
 }
 
 .selling-points {
@@ -329,7 +524,7 @@ p {
   width: 25%;
 }
 .trial-lesson {
-  margin: 20px auto 0 auto;
+  margin: 20px auto;
   color: white;
 }
 .trial-lesson .inner {
@@ -338,8 +533,8 @@ p {
   padding: 20px;
   width: 150px;
   height: 150px;
-  border: 1px solid white;
-  border-radius: 25%;
+  border: 2px solid white;
+  border-radius: 50%;
   flex-shrink: 0;
   flex-grow: 0;
   text-align: center;
@@ -367,12 +562,25 @@ p {
   flex-shrink: 0;
   flex-grow: 0;
   text-align: center;
+  background: white;
+}
+.check {
+  display: inline-block;
+  transform: rotate(45deg);
+  height: 16px;
+  width: 10px;
+  margin: 0 15px 0 5px;
+  border-bottom: 2px solid green;
+  border-right: 2px solid green;
 }
 
 .prices {
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
-  margin: 20px;
+  max-width: 800px;
 }
 .item-description-price {
   display: flex;
@@ -380,6 +588,7 @@ p {
   margin: 10px 10px;
   border: 1px solid green;
   width: 250px;
+  background: white;
 }
 .priced-item {
   font-size: 1.2em;
@@ -392,6 +601,45 @@ p {
 .item-description {
   font-size: 0.9em;
 }
+
+.packages {
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.package {
+  text-align: center;
+  display: inline-block;
+  border: 1px solid green;
+  margin: 10px;
+  width: 160px;
+}
+.package-title {
+  color: white;
+  font-size: 1.2em;
+  padding: 15px;
+}
+.package-price {
+  padding: 15px;
+  font-size: 1.2em;
+  background: white;
+}
+.package ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 15px;
+  height: 80px;
+  background: white;
+  border-bottom: 1px solid;
+  border-color: inherit;
+}
+
+.package-1 { border-color: #68c230; background: #68c230; }
+.package-2 { border-color: #2f85ed; background: #2f85ed; }
+.package-3 { border-color: #ff9442; background: #ff9442; }
+.package-4 { border-color: green; background: green; }
 
 .about-me {
   display: flex;
@@ -416,9 +664,9 @@ p {
 
 .portrait {
   border-radius: 35%;
+  height: 300px;
+  width: 300px;
   margin-bottom: 15px;
-  width: 200px;
-  height: 200px;
   flex-shrink: 0;
   border: 5px solid #ffda47;
 }
@@ -439,7 +687,8 @@ p {
 }
 
 .costs-explained {
-  max-width: 400px;
+  max-width: 640px;
+  margin: 20px auto;
 }
 
 @media screen and (min-width: 768px) {
@@ -464,12 +713,8 @@ p {
   .selling-points .trial-lesson .inner {
     white-space: nowrap;
     height: 20px;
-    border-radius: 5px;
+    border-radius: 40px;
     width: auto;
-  }
-
-  .hero {
-    flex-direction: column;
   }
 }
 
@@ -479,9 +724,6 @@ p {
     margin-top: 80px;
     padding: 0 30px;
   }
-  .hero-img {
-    border-top-left-radius: 20px;
-  }
   .selling-points {
     border-top-right-radius: 20px;
   }
@@ -490,10 +732,13 @@ p {
     position: fixed;
     top: 0;
     left: 0;
-    background: #264d00;
+    background: #46325e;
     height: 220px;
     width: 100%;
     z-index: -1;
+  }
+  .hero {
+    border-radius: 25px 25px 0 0;
   }
 }
 
