achtergrond veranderd en blauwe L toegevoegd

--- a/style.css
+++ b/style.css
@@ -26,10 +26,9 @@ box-shadow: 0px 2px 4px 0px rgba(204,204,204,1);
 
 .navbar-text {
   font-size: 1.5em;
-  font-family: 'Cabin Sketch', cursive;
+  font-weight: 500;
   min-width: 220px;
   margin-left: 50%;
-  margin-top: 5px;
 }
 .navbar-text a {
   text-decoration: none;
@@ -416,11 +415,26 @@ p {
   max-width: 50%;
   text-align: center;
   margin-bottom: 10px;
+  font-size: 1.1em;
 }
 .soon-header {
   font-size: 2.5em;
-  font-family: 'Cabin Sketch', cursive;
+  font-weight: 600;
   line-height: 0.8em;
+}
+.soon-header:after {
+  content: "L";
+  position: absolute;
+  margin-left: 20px;
+  color: white;
+  font-size: 1.2em;
+  background: blue;
+  border-radius: 4px;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  line-height: 45px;
+  transform: rotate(-30deg);
 }
 .soon-link {
   text-decoration: none;
