--- a/style.css
+++ b/style.css
@@ -334,7 +334,7 @@ body {
   font-family: 'Hind Vadodara', sans-serif;
   padding: 0;
   margin: 0;
-  background: #d2d6ce;
+  background: #e3e2de;
 }
 
 div {
@@ -768,7 +768,7 @@ input[type='checkbox'] {
     position: fixed;
     top: 0;
     left: 0;
-    background: #46325e;
+    background: #18007a;
     height: 220px;
     width: 100%;
     z-index: -1;
